--- a/frontend/stylesheets/samples-targets.scss
+++ b/frontend/stylesheets/samples-targets.scss
@@ -7,104 +7,145 @@
 }
 
 .import-button{
-	cursor: pointer;
-	padding: 5px;
-	border: 1px solid;
-	font-family: 'dinot';
-	float: right;
-	margin-top: 10px;
+    cursor: pointer;
+    padding: 5px 12px;
+    border: 1px solid;
+    font-family: 'dinot-bold';
+    float: right;
+    margin-top: 10px;
+    border-radius: 3px;
+}
+
+.import-button:hover{
+    background: $red;
+    color: #fff;    
 }
 
 .cursor-channel{
-	cursor: pointer;
+    cursor: pointer;
+}
+
+.exp-info-bar {
+  width: 100%;
+  height: 40px;
+  background-color: #323232;
+  position: fixed;
 }
 
 .samples, .targets{
-	overflow-y: scroll;
-	table{
-		width: 100%;
-	}
-	padding-left: 50px !important;
-	padding-right: 50px !important;
-	padding-top: 20px;
-	p{
-		font-family: 'dinot-bold';
-		border-bottom: 2px solid black;
-	}
-	input{
-		font-size: 13px;
-		font-family: 'dinot-bold';
-		vertical-align: middle;
-	}
+    table{
+        width: 100%;
+        height: calc(100% - 60px);
+    }
+    padding-left: 50px !important;
+    padding-right: 50px !important;
+    padding-top: 20px;
+    p{
+        font-family: 'dinot-bold';
+        border-bottom: 2px solid black;
+    }
+    input{
+        font-size: 13px;
+        font-family: 'dinot';
+        vertical-align: middle;
+    }
 
-	.add-span{
-		font-family: 'dinot-bold';
-		cursor: pointer;
-		display: inline-block;
-		border: 2px solid black;
-		border-radius: 3px;
-		margin-top: 5px;
-		padding: 7px;
-		.add-plus{
-			width: 13px;
-			margin-top: -5px;
-		}
-	}
+    .add-span{
+        font-family: 'dinot';
+        cursor: pointer;
+        display: inline-block;
+        border: 1px solid black;
+        border-radius: 3px;
+        margin-top: 5px;
+        padding: 7px;
+        position: relative;
+        top: -20px;
+        .add-plus{
+            width: 13px;
+            margin-top: -5px;
+        }
+    }
 
-	.delete{
-		max-width: 15px;
-		vertical-align: middle;
-		cursor: pointer;
-	}
+    .delete{
+        max-width: 15px;
+        vertical-align: middle;
+        cursor: pointer;
+    }
 
-	.delete-confirm{
-		max-width: 30px;
-		vertical-align: middle;
-		cursor: pointer;
-	}
+    .delete-confirm{
+        max-width: 30px;
+        vertical-align: middle;
+        cursor: pointer;
+    }
 
-	.color{
-		vertical-align: middle;
-	}
+    .color{
+        vertical-align: middle;
+    }
 
-	td{
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-	.select-style {
-		font-family: 'dinot-bold';
-	    padding: 0;
-	    margin: 0;
-	    border: none;
-	    //width: 120px;
-	    border-radius: 3px;
-	    overflow: hidden;
-	    background-color: #fff;
-			display: inline-block;
-			vertical-align: middle;
+    td{
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-family: 'dinot';
+    }
 
-	    background: #fff url("http://www.scottgood.com/jsg/blog.nsf/images/arrowdown.gif") no-repeat 90% 50%;
-	}
+    th{
+        padding-top: 0px;
+        padding-bottom: 10px;
+        font-family: 'dinot-bold';
+    }
 
-	.select-style select {
-		font-family: 'dinot-bold';
-		cursor: pointer;
-	    padding: 0px;
-	    width: 100%;
-	    border: none;
-	    box-shadow: none;
-	    background-color: transparent;
-	    background-image: none;
-	    -webkit-appearance: none;
-	       -moz-appearance: none;
-	            appearance: none;
-	}
+    .select-style {
+        font-family: 'dinot-bold';
+        padding: 0;
+        margin: 0;
+        border: none;
+        //width: 120px;
+        border-radius: 3px;
+        overflow: hidden;
+        background-color: #fff;
+            display: inline-block;
+            vertical-align: middle;
 
-	.select-style select:focus {
-	    outline: none;
-	}
+        background: #fff url("http://www.scottgood.com/jsg/blog.nsf/images/arrowdown.gif") no-repeat 90% 50%;
+    }
 
-	.select-channel-border{
-		border-bottom: 1px solid red;
-	}
+    .select-style select {
+        font-family: 'dinot-bold';
+        cursor: pointer;
+        padding: 0px;
+        width: 100%;
+        border: none;
+        box-shadow: none;
+        background-color: transparent;
+        background-image: none;
+        -webkit-appearance: none;
+           -moz-appearance: none;
+                appearance: none;
+    }
+
+    .select-style select:focus {
+        outline: none;
+    }
+
+    .select-channel-border{
+        border-bottom: 1px solid red;
+    }
+}
+
+.header-samples-targets{
+    height: 50px;
+    box-shadow: 0 2px 3px #aaa;
+    margin-bottom: 5px;
+
+    &::after{
+        content: ' ';
+        clear: both;
+    }    
+
+    h4{
+        font-family: 'dinot-bold';
+        font-size: 13px;
+        margin: 0;
+        line-height: 50px;
+    }
 }
