--- a/frontend/javascripts/app/views/plate-layout.html
+++ b/frontend/javascripts/app/views/plate-layout.html
@@ -29,6 +29,11 @@ limitations under the License.
 				</div>
 			</header-status>
 
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 header-plate-layout">
+                <h4 style="display:inline-block">Plate Layout</h4>
+                <span class="experiment-info">Using Standards from <b>{{experiment.name}}</b></span>
+            </div>
+
 			<div class="plate-layout-wells">
 				<table style="width:100%">
 					<tbody>
@@ -40,12 +45,12 @@ limitations under the License.
 						</tr>
 						<tr ng-repeat="row in rows">
 							<td class="row-header" ng-mousedown="dragStart($event, 'row', row.index)" ng-mousemove="dragged($event, 'row', row.index)" ng-mouseup="dragStop($event, 'row', row.index)" ng-class="{dragged: row.selected}">
-								{{ row.index + 1 }}
+								{{ rowCharacters[row.index] }}
 							</td>
 							<td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart($event, 'well', i)" ng-mousemove="dragged($event, 'well', i)" ng-mouseup="dragStop($event, 'well', i)" ng-class="{selected: well.selected, active: well.active}" ng-style="getWellStyle(row, col, well, i)">
 								<div class="well-switch-container" ng-style="getWellContainerStyle(row, col, well, i)">
 									<div class="ct-cq-container" ng-if="row.index == 0">
-										<div class="sample-name" ng-class="{'no-sample-set': wellInf[col.index].sample == 'No sample'}"> {{wellInf[col.index].sample}} </div>
+										<div class="sample-name" ng-class="{'no-sample-set': wellInf[col.index].sample == 'No sample'}"> {{(wellInf[col.index].sample == 'No sample') ? '&nbsp' : wellInf[col.index].sample}} </div>
 										<hr class="sample-underline">
 										<div>
 											<div class="targetRect" ng-style="{'background-color': wellInf[col.index].target1color}" ng-class="{'no-targetBorder': wellInf[col.index].target1 == 'Not set'}">
@@ -56,7 +61,7 @@ limitations under the License.
 												<span ng-if="wellInf[col.index].target1type == ''" class="wellCircle" ng-class="{'wellCircle-empty': wellInf[col.index].target1 == 'Not set'}"></span>
 											</div>
 											<div style="display:inline-block;padding-left:5px;">
-												<span class="target-name" ng-class="{'no-sample-set': wellInf[col.index].target1 == 'Not set'}">{{wellInf[col.index].target1}} </span>
+												<span class="target-name" ng-class="{'no-sample-set': wellInf[col.index].target1 == 'Not set'}">{{(wellInf[col.index].target1 == 'Not set') ? '' : wellInf[col.index].target1}} </span>
 												<br>
 												<span class="target-name" ng-class="{'hiding-div':wellInf[col.index].target1quantityM == '' }">{{wellInf[col.index].target1quantityM}} x 10<sup>{{wellInf[col.index].target1quantityB}}</sup> </span>
 											</div>
@@ -73,14 +78,14 @@ limitations under the License.
 											</div>
 
 											<div ng-class="{'hiding-div':wellInf[col.index].target2 == 'Not set'}" style="display:inline-block;padding-left:5px;">
-												<span class="target-name">{{wellInf[col.index].target2}} </span>
+												<span class="target-name">{{(wellInf[col.index].target2 == 'Not set') ? '' : wellInf[col.index].target2}} </span>
 												<br>
 												<span class="target-name" ng-class="{'hiding-div':wellInf[col.index].target2quantityM == '' }">{{wellInf[col.index].target2quantityM}} x 10<sup>{{wellInf[col.index].target2quantityB}}</sup> </span>
 											</div>
 										</div>
 									</div>
 									<div class="ct-cq-container" ng-if="row.index == 1">
-										<div class="sample-name" ng-class="{'no-sample-set': wellInf[col.index+8].sample == 'No sample'}"> {{wellInf[col.index+8].sample}} </div>
+										<div class="sample-name" ng-class="{'no-sample-set': wellInf[col.index+8].sample == 'No sample'}"> {{(wellInf[col.index+8].sample == 'No sample') ? '&nbsp' : wellInf[col.index+8].sample}} </div>
 										<hr class="sample-underline">
 										<div>
 											<div class="targetRect" ng-style="{'background-color': wellInf[col.index+8].target1color}" ng-class="{'no-targetBorder': wellInf[col.index+8].target1 == 'Not set'}">
@@ -92,7 +97,7 @@ limitations under the License.
 											</div>
 
 											<div style="display:inline-block;padding-left:5px;">
-												<span class="target-name" ng-class="{'no-sample-set': wellInf[col.index+8].target1 == 'Not set'}">{{wellInf[col.index+8].target1}} </span>
+												<span class="target-name" ng-class="{'no-sample-set': wellInf[col.index+8].target1 == 'Not set'}">{{(wellInf[col.index+8].target1 == 'Not set') ? '' : wellInf[col.index+8].target1}} </span>
 												<br>
 												<span class="target-name" ng-class="{'hiding-div':wellInf[col.index+8].target1quantityM == '' }">{{wellInf[col.index+8].target1quantityM}} x 10<sup>{{wellInf[col.index+8].target1quantityB}}</sup></span>
 											</div>
@@ -108,7 +113,7 @@ limitations under the License.
 											</div>
 
 											<div ng-class="{'hiding-div':wellInf[col.index+8].target2 == 'Not set'}" style="display:inline-block;padding-left:5px;">
-												<span class="target-name">{{wellInf[col.index+8].target2}} </span>
+												<span class="target-name">{{(wellInf[col.index+8].target2 == 'Not set') ? '' : wellInf[col.index+8].target2}} </span>
 												<br>
 												<span class="target-name" ng-class="{'hiding-div':wellInf[col.index+8].target2quantityM == '' }">{{wellInf[col.index+8].target2quantityM}} x 10<sup>{{wellInf[col.index+8].target2quantityB}}</sup></span>
 											</div>
@@ -135,7 +140,7 @@ limitations under the License.
 								<option ng-repeat="option in samples" value="{{option.id}}">{{option.name}}</option>
 							</select> -->
 
-							<p class="testing-clicking">{{sampleSelected}}</p>
+							<p class="testing-clicking">{{sampleSelected}}<span class="span-arrow-down"></span></p>
 
 						</div>
 						<div ng-class="{'hiding-div':!showSampleOptions }" class="options-div samples-div">
@@ -162,7 +167,10 @@ limitations under the License.
 									<option ng-repeat="option in targets1" value="{{option.id}}">{{option.name}}</option>
 								</select> -->
 
-								<p class="testing-clicking"><span class="span-target-color" ng-style="{'background-color': target1SelectedColor}"></span>{{target1Selected}}</p>
+								<p class="testing-clicking">
+									<span class="span-target-color" ng-style="{'background-color': target1SelectedColor}"></span>{{target1Selected}}
+									<span class="span-arrow-down"></span>
+								</p>
 
 							</div>
 							<div ng-class="{'hiding-div':!showTarget1Options }" class="options-div">
@@ -199,7 +207,7 @@ limitations under the License.
 									<option value=0>Select a target</option>
 									<option ng-repeat="option in targets2" value="{{option.id}}">{{option.name}}</option>
 								</select> -->
-								<p class="testing-clicking"><span class="span-target-color" ng-style="{'background-color': target2SelectedColor}"></span>{{target2Selected}}</p>
+								<p class="testing-clicking"><span class="span-target-color" ng-style="{'background-color': target2SelectedColor}"></span>{{target2Selected}}<span class="span-arrow-down"></span></p>
 
 							</div>
 							<div ng-class="{'hiding-div':!showTarget2Options }" class="options-div">
@@ -232,7 +240,7 @@ limitations under the License.
 				</div>
 
 				<div class="col-lg-3 col-md-3" ng-class="{opacityLess: !selectionMade}" style="padding-top:10px;">
-					<h4>Clear</h4>
+					<h4>Clear...</h4>
 					<hr>
 					<div class="select-style" ng-click="openClearOptions()">
 
@@ -240,7 +248,7 @@ limitations under the License.
 							<option value = "">Select a value</option>
 						</select> -->
 
-						<p class="testing-clicking">{{clearSelected}}</p>
+						<p class="testing-clicking">{{clearSelected}}<span class="span-arrow-down"></span></p>
 
 					</div>
 					<div ng-class="{'hiding-div':!showClearOptions }" class="options-div">
