--- a/frontend/javascripts/app/views/experiment/melt-curve.html
+++ b/frontend/javascripts/app/views/experiment/melt-curve.html
@@ -19,8 +19,8 @@ limitations under the License.
 <div class="melt-curve-chart-state-active results-charts">
   <div class="page-layout" ng-controller="MeltCurveChartCtrl" ng-show="experiment">
     <div class="content">
-      <div class="chart-section">
-        <div class="curve-header">
+      <div class="chart-section" style="padding-left: 0px; padding-right: 0px">
+        <div class="curve-header" style="margin-top: 20px;">
           <div class="row">
             <div class="col-sm-6 curve-name">
               <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart">
