--- a/frontend/stylesheets/results-charts.scss
+++ b/frontend/stylesheets/results-charts.scss
@@ -11,6 +11,8 @@
     .curve-title {
       display: inline-block; //width: 70%;
       cursor: pointer;
+      font-size: 30px;
+      padding-top:10px;
       img {
         display: inline-block;
         margin-top: -5px;
