--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -18,82 +18,81 @@ limitations under the License.
 -->
 <div class="amplification-chart-state-active results-charts">
   <div class="page-layout" ng-controller="AmplificationChartCtrl" ng-show="experiment">
-    <div class="content row">
-      <div class="chart-section col-lg-8 col-md-8 col-sm-6 col-xs-6" >
+    <div class="content row" style="padding-top:0px;">
+      <div class="chart-section col-lg-8 col-md-8 col-sm-6 col-xs-6" style="padding-left: 0px; padding-right: 0px">
         <div>
-          <div class="curve-header">
-            <div>
-              <div class="col-lg-4 col-md-5 col-sm-5 col-xs-5 curve-name">
-                <!-- <span class="curve-title H1" ng-click="RunExperimentCtrl.changeChartTypeModal()"> -->
-                <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart" style="font-size: 30px">
-                  Amplification Curve
-                  <img class="arrow-down" src="/images/arrow-down.png">
-                </chart-chooser>
-              </div>
-              <div class="col-lg-8 col-md-7 col-sm-7 col-xs-7 ampli-toggles">
-                <div class="row">
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options">
-                    <div class="subheader-switches SH">
-                      <div class="item-switch">
-                        <label>Baseline Sub.</label>
-                        <switch class="switch" ng-model="baseline_subtraction"></switch>
-                      </div>
-                      <div class="item-switch-channel" ng-show="!is_dual_channel">
-                        <label class="amplification-options" style="color: red" ng-click="openOptionsModal()">Advanced Settings</label>
-                      </div>
-                      <div class="item-switch-channel" ng-show="is_dual_channel">
-                        <label ng-show="experiment.type != 'test_kit'" style="color: red !important" class="amplification-options" ng-click="openOptionsModal()">Advanced Settings</label>
-                        <!-- <label>CHOOSE CHANNEL:</label> &nbsp;
-                        <switch ng-model="channel_1"></switch>
-                        <label>1</label>
-                        <switch ng-model="channel_2"></switch>
-                        <label style="padding-right:0px;">2</label> -->
-                      </div>
+            <!--curve-header-->
+          <div class="curve-header" style="margin-left:0px; margin-right:0px; margin-top: 20px;">
+            <div class="col-lg-4 col-md-5 col-sm-5 col-xs-5 curve-name" style="padding-left: 15px; width: 34%" >
+              <!-- <span class="curve-title H1" ng-click="RunExperimentCtrl.changeChartTypeModal()"> -->
+              <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart" style="padding-left: 15px;">
+                Amplification Curve
+                <img class="arrow-down" src="/images/arrow-down.png">
+              </chart-chooser>
+            </div>
+            <div class="col-lg-8 col-md-7 col-sm-7 col-xs-7 ampli-toggles" style="width:66%;">
+              <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:34%;">
+                  <div class="subheader-switches SH">
+                    <div class="item-switch">
+                      <label>Baseline Sub.</label>
+                      <switch class="switch" ng-model="baseline_subtraction"></switch>
+                    </div>
+                    <div class="item-switch-channel" ng-show="!is_dual_channel">
+                      <label class="amplification-options" style="color: red" ng-click="openOptionsModal()">Advanced Settings</label>
+                    </div>
+                    <div class="item-switch-channel" ng-show="is_dual_channel">
+                      <label ng-show="experiment.type != 'test_kit'" style="color: red !important" class="amplification-options" ng-click="openOptionsModal()">Advanced Settings</label>
+                      <!-- <label>CHOOSE CHANNEL:</label> &nbsp;
+                      <switch ng-model="channel_1"></switch>
+                      <label>1</label>
+                      <switch ng-model="channel_2"></switch>
+                      <label style="padding-right:0px;">2</label> -->
                     </div>
                   </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options">
-                    <div class="plot-option">
-                      <p>Plot Type</p>
-                      <form role="form" class="form-horizontal" name="plotType" novalidate>
-                        <div class="form-group">
-                          <div class="col-md-12">
-                            <div class="dropdown" ng-click="showPlotTypeList()">
-                              <button class="dropbtn" style="font-size: 15px">
-                                <span class="test" style="float:left;">{{curve_type.charAt(0).toUpperCase() + curve_type.slice(1)}}</span>
-                                <img class="arrow-down" src="/images/arrow-down.png">
-                              </button>
-                              <div id="plotTypeList" class="dropdown-content">
-                                <a href="" ng-click="curve_type='log'" value="abc">Log</a>
-                                <a href="" ng-click="curve_type='linear'" value="abc">Linear</a>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options">
-                    <div class="plot-option">
-                      <p>Color by</p>
-                      <form role="form" class="form-horizontal" name="colorBy" novalidate>
-                        <div class="form-group">
-                          <div class="col-md-12" style="padding-right: 10px;">
-                            <div class="dropdown" ng-click="showColorByList()">
-                              <button class="dropbtn">
-                                <span class="test" style="float:left;">{{color_by.charAt(0).toUpperCase() + color_by.slice(1)}}</span>
-                                <img class="arrow-down" src="/images/arrow-down.png">
-                              </button>
-                              <div id="colorByList_ampli" class="dropdown-content" style="font-size: 15px">
-                                <a href="" ng-click="color_by='sample'" value="abc">Sample</a>
-                                <a href="" ng-click="color_by='target'" value="abc">Target</a>
-                                <a href="" ng-click="color_by='well'" value="abc">Well</a>
-                              </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:33%; text-align: right; padding-right: 0px">
+                  <div class="plot-option">
+                    <p>Plot Type</p>
+                    <form role="form" class="form-horizontal" name="plotType" novalidate>
+                      <div class="form-group">
+                        <div class="col-md-12">
+                          <div class="dropdown" ng-click="showPlotTypeList()">
+                            <button class="dropbtn" style="font-size: 15px">
+                              <span class="test" style="float:left;">{{curve_type.charAt(0).toUpperCase() + curve_type.slice(1)}}</span>
+                              <img class="arrow-down" src="/images/arrow-down.png">
+                            </button>
+                            <div id="plotTypeList" class="dropdown-content">
+                              <a href="" ng-click="curve_type='log'" value="abc">Log</a>
+                              <a href="" ng-click="curve_type='linear'" value="abc">Linear</a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </form>
                   </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:33%; text-align: right; padding-right: 40px">
+                  <div class="plot-option">
+                    <p>Color by</p>
+                    <form role="form" class="form-horizontal" name="colorBy" novalidate>
+                      <div class="form-group">
+                        <div class="col-md-12" style="padding-right: 10px;">
+                          <div class="dropdown" ng-click="showColorByList()">
+                            <button class="dropbtn">
+                              <span class="test" style="float:left;">{{color_by.charAt(0).toUpperCase() + color_by.slice(1)}}</span>
+                              <img class="arrow-down" src="/images/arrow-down.png">
+                            </button>
+                            <div id="colorByList_ampli" class="dropdown-content" style="font-size: 15px">
+                              <a href="" ng-click="color_by='sample'" value="abc">Sample</a>
+                              <a href="" ng-click="color_by='target'" value="abc">Target</a>
+                              <a href="" ng-click="color_by='well'" value="abc">Well</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
@@ -204,7 +203,7 @@ limitations under the License.
           <chart-well-switch ng-model="wellButtons" color-by="color_by" chart-type="amplification"></chart-well-switch>
         </div>
       </div>
-      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" full-height offset="110" min="808" style="padding-right: 0; padding-left: 0;">
+      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" full-height offset="110" min="808" style="padding-right: 0; padding-left: 0; margin-top:0px;">
         <table>
           <tbody>
             <tr>
