fixed by markup

--- a/frontend/stylesheets/directives/chart-well-switch.css.scss
+++ b/frontend/stylesheets/directives/chart-well-switch.css.scss
@@ -40,7 +40,8 @@
 
     &.selected {
       .ct-cq-container {
-        background-color: #e4f4fa;
+        //background-color: #e4f4fa;
+        background-color: white;
       }
     }
 
