--- a/frontend/stylesheets/results-charts.scss
+++ b/frontend/stylesheets/results-charts.scss
@@ -11,7 +11,8 @@
     .curve-title {
       display: inline-block; //width: 70%;
       cursor: pointer;
-      font-size: 30px;
+      font-size: 30pt;
+      line-height: 35pt;
       padding-top:10px;
       img {
         display: inline-block;
