--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -19,21 +19,21 @@ limitations under the License.
 <div class="amplification-chart-state-active results-charts">
   <div class="page-layout" ng-controller="AmplificationChartCtrl" ng-show="experiment">
     <div class="content row" style="padding-top:0px;">
-      <div class="chart-section col-lg-8 col-md-8 col-sm-6 col-xs-6" style="padding-left: 0px; padding-right: 0px">
+      <div class="chart-section col-lg-8 col-md-8 col-sm-6 col-xs-6" offset="-130" force="true" full-height style="padding-left: 0px; padding-right: 0px; display: flex; flex-direction: column; justify-content: space-between; background: #eeeeee">
         <div>
             <!--curve-header-->
           <div class="curve-header" style="margin-left:0px; margin-right:0px; margin-top: 20px;">
-            <div class="col-lg-4 col-md-5 col-sm-5 col-xs-5 curve-name" style="padding-left: 15px; width: 34%" >
+            <div class="col-lg-4 col-md-5 col-sm-5 col-xs-5 curve-name" style="padding-left: 15px; width: 40%" >
               <!-- <span class="curve-title H1" ng-click="RunExperimentCtrl.changeChartTypeModal()"> -->
               <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart" style="padding-left: 15px;">
                 Amplification Curve
                 <img class="arrow-down" src="/images/arrow-down.png">
               </chart-chooser>
             </div>
-            <div class="col-lg-8 col-md-7 col-sm-7 col-xs-7 ampli-toggles" style="width:66%;">
+            <div class="col-lg-8 col-md-7 col-sm-7 col-xs-7 ampli-toggles" style="width:60%;">
               <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:34%;">
-                  <div class="subheader-switches SH">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:40%;">
+                  <div class="subheader-switches SH" style="font-size: 15pt;">
                     <div class="item-switch">
                       <label>Baseline Sub.</label>
                       <switch class="switch" ng-model="baseline_subtraction"></switch>
@@ -42,7 +42,7 @@ limitations under the License.
                       <label class="amplification-options" style="color: red" ng-click="openOptionsModal()">Advanced Settings</label>
                     </div>
                     <div class="item-switch-channel" ng-show="is_dual_channel">
-                      <label ng-show="experiment.type != 'test_kit'" style="color: red !important" class="amplification-options" ng-click="openOptionsModal()">Advanced Settings</label>
+                      <label ng-show="experiment.type != 'test_kit'" style="color: red !important;" class="amplification-options" ng-click="openOptionsModal()">Advanced Settings</label>
                       <!-- <label>CHOOSE CHANNEL:</label> &nbsp;
                       <switch ng-model="channel_1"></switch>
                       <label>1</label>
@@ -51,18 +51,18 @@ limitations under the License.
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:33%; text-align: right; padding-right: 0px">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:27%; text-align: right; padding-right: 0px">
                   <div class="plot-option">
                     <p>Plot Type</p>
                     <form role="form" class="form-horizontal" name="plotType" novalidate>
                       <div class="form-group">
                         <div class="col-md-12">
                           <div class="dropdown" ng-click="showPlotTypeList()">
-                            <button class="dropbtn" style="font-size: 15px">
+                            <button class="dropbtn" style="font-size: 15pt; line-height: 20pt;">
                               <span class="test" style="float:left;">{{curve_type.charAt(0).toUpperCase() + curve_type.slice(1)}}</span>
                               <img class="arrow-down" src="/images/arrow-down.png">
                             </button>
-                            <div id="plotTypeList" class="dropdown-content">
+                            <div id="plotTypeList" class="dropdown-content" style="font-size: 15pt; line-height: 20pt;">
                               <a href="" ng-click="curve_type='log'" value="abc">Log</a>
                               <a href="" ng-click="curve_type='linear'" value="abc">Linear</a>
                             </div>
@@ -79,11 +79,11 @@ limitations under the License.
                       <div class="form-group">
                         <div class="col-md-12" style="padding-right: 10px;">
                           <div class="dropdown" ng-click="showColorByList()">
-                            <button class="dropbtn">
+                            <button class="dropbtn" style="font-size: 15pt; line-height: 20pt;">
                               <span class="test" style="float:left;">{{color_by.charAt(0).toUpperCase() + color_by.slice(1)}}</span>
                               <img class="arrow-down" src="/images/arrow-down.png">
                             </button>
-                            <div id="colorByList_ampli" class="dropdown-content" style="font-size: 15px">
+                            <div id="colorByList_ampli" class="dropdown-content" style="font-size: 15pt; line-height: 20pt;">
                               <a href="" ng-click="color_by='sample'" value="abc">Sample</a>
                               <a href="" ng-click="color_by='target'" value="abc">Target</a>
                               <a href="" ng-click="color_by='well'" value="abc">Well</a>
@@ -99,8 +99,8 @@ limitations under the License.
           </div>
 
           <div class="curve-body" full-height offset="400" min="500" style="padding-right: 0px;">
-            <div class="curve-plot" id="curve-plot" style="display: flex; flex-direction: column; justify-content: space-between; width: 80%">
-              <div class="chart-container" full-height offset="550" min="389" style="height: 85%;">
+            <div class="curve-plot" id="curve-plot" style="display: flex; flex-direction: column; justify-content: space-between; width: 82%">
+              <div class="chart-container" full-height offset="550" min="389" style="height: 90%;">
                 <div class="chart-error B1" ng-show="retrying && !fetching && error">
                   <strong class="text-black">Unable to load chart data</strong>
                   <p ng-bind="error"></p>
@@ -128,13 +128,13 @@ limitations under the License.
                   </tr>
                 </table> -->
               </div>
-              <div style="display: flex; flex-direction: row; height: 15%;">
+              <div style="display: flex; flex-direction: row; height: 10%;">
                 <div style="display: block; width: 5%; display: flex; flex-direction: column; height: 100%;">
                   <button class="button zoom-button" ng-click="zoomIn()" style="text-align: center; vertical-align: middle; font-size: 20px; margin-right: 30px; padding: 0px; height: 50%; width: 30px;">+</button>
                   <button class="button zoom-button" ng-click="zoomOut()" style="text-align: center; vertical-align: middle; font-size: 20px; margin-left: 30px; padding: 0px; height: 50%; width: 30px;">-</button>
                 </div>
                 <div style="display: grid; width: 95%; height: 100%; align-content: center; vertical-align: middle; text-align: center">
-                    <font style="font-weight: bold;">Cycle Number</font>
+                    <font style="font-weight: bold; font-size: 10pt; line-height: 16pt;">Cycle Number</font>
                 </div>
               </div>
             </div>
@@ -143,32 +143,32 @@ limitations under the License.
               <div style="height:100%; padding-right: 20px; margin: 0px; background: transparent; display: flex; float: left; flex-direction: column; justify-content: space-between;">
                   <div style="padding: 0px; background: transparent">
                       <div class="parameters">
-                        <div class="header" ng-style="bgcolor_target" style="min-height: 41px; font-size: 15px; color:white;">
+                        <div class="header" ng-style="bgcolor_target" style="min-height: 41px; font-size: 15pt; line-height: 20pt; color:white;">
                           <!-- Target: -->
                           {{label_target}}
                         </div>
                         <div>
                           <table class="parameters-table">
                             <tr>
-                              <td style="font-size: 15px; padding: 2px;">Cycle:</td>
-                              <td style="font-size: 15px; padding: 2px;">{{label_cycle}}</td>
+                              <td style="font-size: 15pt; line-height: 25pt; padding: 2px;">Cycle:</td>
+                              <td style="font-size: 15pt; line-height: 25pt; padding: 2px;">{{label_cycle}}</td>
                             </tr>
                             <tr>
-                              <td style="font-size: 15px; padding: 2px;">RFU:</td>
-                              <td style="font-size: 15px; padding: 2px;">{{label_RFU}}</td>
+                              <td style="font-size: 15pt; line-height: 25pt; padding: 2px;">RFU:</td>
+                              <td style="font-size: 15pt; line-height: 25pt; padding: 2px;">{{label_RFU}}</td>
                             </tr>
                             <tr>
-                              <td style="font-size: 15px; padding: 2px;">dF/dc:</td>
-                              <td style="font-size: 15px; padding: 2px;">{{label_dF_dC}}</td>
+                              <td style="font-size: 15pt; line-height: 25pt; padding: 2px;">dF/dc:</td>
+                              <td style="font-size: 15pt; line-height: 25pt; padding: 2px;">{{label_dF_dC}}</td>
                             </tr>
                             <tr>
-                              <td style="font-size: 15px; padding: 2px;">D<sup>2</sup>/dc<sup>2</sup>:</td>
-                              <td style="font-size: 15px; padding: 2px;">{{label_D2_dc2}}</td>
+                              <td style="font-size: 15pt; line-height: 25pt; padding: 2px;">d<sup>2</sup>/dc<sup>2</sup>:</td>
+                              <td style="font-size: 15pt; line-height: 25pt; padding: 2px;">{{label_D2_dc2}}</td>
                             </tr>
                           </table>
                         </div>
                       </div>
-                      <div class="info" style="font-size: 15px; padding-top: 8px; padding-bottom: 8px; padding-left: 10px;">
+                      <div class="info" style="font-size: 12pt; line-height: 15pt; padding-top: 8px; padding-bottom: 8px; padding-left: 10px;">
                         Channel: {{label_channel}}
                       </div>
                       <!-- <div class="info1" ng-style="bgcolor_wellSample"  style="min-height: 41px; font-size: 15px; color:white; margin-top: 5px">
@@ -181,7 +181,7 @@ limitations under the License.
                         <td>
                           <span ng-if="color_by==='target'" class="dot" ng-attr-style="background-color: {{COLORS[$index]}}"></span>
                         </td>
-                        <td style="font-size: 15px; padding-top: 5px; padding-bottom: 5px;">{{target}}</td>
+                        <td style="font-size: 15pt; line-height: 20pt; padding-top: 5px; padding-bottom: 5px; color: black;">{{target}}</td>
                         <td class="td-tik" ng-click="targetClick($index)">
                           <span ng-show="!targetsSetHided[$index]">
                             <img src="/images/target_on.svg">
@@ -203,8 +203,8 @@ limitations under the License.
           <chart-well-switch ng-model="wellButtons" color-by="color_by" chart-type="amplification"></chart-well-switch>
         </div>
       </div>
-      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" full-height offset="110" min="808" style="padding-right: 0; padding-left: 0; margin-top:0px;">
-        <table>
+      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" offset="-130" force="true" full-height style="padding-right: 0; padding-left: 0; margin-top:0px;">
+        <table full-height>
           <tbody>
             <tr>
               <th class="B2" style="border-left:none">Clr</th>
@@ -244,10 +244,10 @@ limitations under the License.
               </td>
               <td ng-click="focusExpName($index)">
                 <span ng-if="color_by==='sample'" class="dot" ng-attr-style="background-color: {{samplesSet.indexOf(samples[i]) < 0 ? '#000000' : COLORS[samplesSet.indexOf(samples[i])]}}"></span>
-                <span class="sample-span" ng-click="focusExpName($index)" ng-show="!editExpNameMode[$index]" style="font-size:12px;">
+                <span class="sample-span" ng-click="focusExpName($index)" ng-show="!editExpNameMode[$index]" style="font-size:12pt;">
                   {{samples[$index] | truncate:20}}
                 </span>
-                <input type="text" class="sample-input" ng-show="editExpNameMode[$index]" focus-on="editExpNameMode" ng-blur="updateSampleName($index,samples[$index])"  on-shift-enter="updateSampleNameEnter($index,samples[$index])"  ng-model="samples[$index]">
+                <input type="text" class="sample-input" ng-show="editExpNameMode[$index]" focus-on="editExpNameMode" ng-blur="updateSampleName($index,samples[$index])"  on-shift-enter="updateSampleNameEnter($index,samples[$index])"  ng-model="samples[$index]" style="font-size:12pt; line-height: 15pt;">
               </td>
               <td class="type-td">
                 <span class="type-span" style="width: 20px; height: 20px;" ng-show="types[$index]">
@@ -255,10 +255,10 @@ limitations under the License.
                 </span>
               </td>
               <td ng-click="focusExpTarget($index)">
-                <span class="target-span" ng-click="focusExpTarget($index)" ng-show="!editExpTargetMode[$index]" style="font-size: 12px">
+                <span class="target-span" ng-click="focusExpTarget($index)" ng-show="!editExpTargetMode[$index]" style="font-size: 12pt">
                   {{targets[$index] | truncate:20}}
                 </span>
-                <input type="text" ng-show="editExpTargetMode[$index]" focus-on="editExpTargetMode" ng-blur="updateTarget($index,targets[$index])"  on-shift-enter="updateTargetEnter($index,targets[$index])"  ng-model="targets[$index]">
+                <input type="text" ng-show="editExpTargetMode[$index]" focus-on="editExpTargetMode" ng-blur="updateTarget($index,targets[$index])"  on-shift-enter="updateTargetEnter($index,targets[$index])"  ng-model="targets[$index]" style="font-size:12pt; line-height: 15pt;">
               </td>
               <td class="B2">
                 <span class="width1" >
@@ -340,7 +340,7 @@ limitations under the License.
           </div>
         </div>
         <div class="col-md-5 col-sm-5 col-xs-5 div-style">
-          <h3 class="h3-baseline">BASELINE SUBTRACTION</h3>
+          <h3 clanpss="h3-baseline">BASELINE SUBTRACTION</h3>
           <h3 class="h3-cq baseline-cycles">BASELINE CYCLES</h3>
           <label ng-mouseover="hover(baseline_auto)" ng-mouseleave="hoverLeave()">
             <input type="radio" ng-model="baseline_sub" id="auto" value="auto" style="display:none">
