--- a/frontend/stylesheets/results-charts.scss
+++ b/frontend/stylesheets/results-charts.scss
@@ -13,7 +13,7 @@
       cursor: pointer;
       font-size: 30pt;
       line-height: 35pt;
-      padding-top:10px;
+      padding-top:13pt;
       img {
         display: inline-block;
         margin-top: -5px;
