fixed top header some size

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -33,7 +33,7 @@ limitations under the License.
             <div class="col-lg-8 col-md-7 col-sm-7 col-xs-7 ampli-toggles" style="width:60%;">
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:40%;">
-                  <div class="subheader-switches SH" style="font-size: 15pt;">
+                  <div class="subheader-switches SH" style="font-size: 13pt;">
                     <div class="item-switch">
                       <label>Baseline Sub.</label>
                       <switch class="switch" ng-model="baseline_subtraction"></switch>
@@ -54,7 +54,7 @@ limitations under the License.
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:27%; text-align: right; padding-right: 0px">
                   <div class="plot-option">
                     <p>Plot Type</p>
-                    <form role="form" class="form-horizontal" name="plotType" novalidate>
+                    <form role="form" class="form-horizontal" name="plotType" style="font-size: 13pt" novalidate>
                       <div class="form-group">
                         <div class="col-md-12">
                           <div class="dropdown" ng-click="showPlotTypeList()">
@@ -75,7 +75,7 @@ limitations under the License.
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options" style="width:33%; text-align: right; padding-right: 40px">
                   <div class="plot-option">
                     <p>Color by</p>
-                    <form role="form" class="form-horizontal" name="colorBy" novalidate>
+                    <form role="form" class="form-horizontal" name="colorBy" style="font-size: 13pt" novalidate>
                       <div class="form-group">
                         <div class="col-md-12" style="padding-right: 10px;">
                           <div class="dropdown" ng-click="showColorByList()">
